Try restricting max memory to prevent performance test from dying