@@ -17,11 +17,18 @@
 
 package org.gradle.performance
 
+import org.gradle.performance.fixture.BuildExperimentSpec
 import org.junit.experimental.categories.Category
 import spock.lang.Unroll
 
 @Category(Experiment)
 class VariantsPerformanceTest extends AbstractCrossBuildPerformanceTest {
+
+    @Override
+    protected void defaultSpec(BuildExperimentSpec.Builder builder) {
+        builder.invocation.gradleOpts("-Xmx1024m", "-XX:MaxPermSize=256m")
+        super.defaultSpec(builder)
+    }
 
     @Unroll
     def "#size project using variants #scenario build"() {
@@ -127,7 +134,6 @@ class VariantsPerformanceTest extends AbstractCrossBuildPerformanceTest {
         scenario                      | tasks
         "single variant"              | [":project1:flavour1type1_t1"]
         "all variants single project" | [":project1:allVariants"]
-        // This is causing the performance test process to die and the build to hang: disabling for now.
-//        "all variants all projects"   | ["allVariants"]
+        "all variants all projects"   | ["allVariants"]
     }
 }
